add csrf protection

--- a/package.json
+++ b/package.json
@@ -28,13 +28,19 @@
     "url": "https://github.com/sollerias/omni_channel_backend/issues"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/omnichannel",
+      "/utils"
+    ]
   },
   "homepage": "https://",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "chalk": "^4.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
